--- a/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
@@ -128,6 +128,10 @@
             .ui-layout-resizer-north-open{
             height: 0px !important;
             }
+
+            .noHeader.ui-datatable table thead tr {
+            display: none;
+            }
         </h:outputStylesheet>
 
         <h:outputStylesheet library="webjars" name="font-awesome/5.12.0/css/all.min-jsf.css" />
