--- a/src/main/resources/META-INF/resources/accounts/coa.xhtml
+++ b/src/main/resources/META-INF/resources/accounts/coa.xhtml
@@ -16,41 +16,41 @@
                 <div class="ui-g-12">
                     <p:toolbar id="toolbar">
                         <f:facet name="left">
-                            <p:commandButton title="New Account Group" icon="fas fa-folder-plus" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="New Account Group" icon="fas fa-folder-plus" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.createNewAccountGroup()}"
                                              disabled="#{chartOfAccountController.newGroupDisabled}"
                                              update=":AccountForm" oncomplete="PF('AccountEditDialog').show()"/>
-                            <p:commandButton title="Edit Account Group" icon="fa fa-edit" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Edit Account Group" icon="fa fa-edit" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.editAccountGroup()}"
                                              disabled="#{chartOfAccountController.editGroupDisabled}"/>
-                            <p:commandButton title="New Account" icon="fas fa-file-medical" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="New Account" icon="fas fa-file-medical" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.createNewAccount()}"
                                              disabled="#{chartOfAccountController.newAccountDisabled}"/>
-                            <p:commandButton title="Edit Account" icon="fa fa-file-signature" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Edit Account" icon="fa fa-file-signature" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.editAccount()}"
                                              disabled="#{chartOfAccountController.editAccountDisabled}"/>
-                            <p:commandButton title="Clone Account" icon="fa fa-copy" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Clone Account" icon="fa fa-copy" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.cloneAccount()}"
                                              disabled="#{chartOfAccountController.cloneAccountDisabled}"/>
-                            <p:commandButton title="Refresh Chart of Account" icon="fa fa-refresh" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Refresh Chart of Account" icon="fa fa-refresh" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{chartOfAccountController.refreshCoa()}"
                                              update="cattree"/>
                         </f:facet>
 
                         <f:facet name="right">
-                            <p:commandButton title="New Product" icon="fa fa-plus" process="@this" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="New Product" icon="fa fa-plus" process="@this" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{productTreeViewController.newTab_In_newBtab()}"
                                              disabled="#{productTreeViewController.productNewDisabled}" 
                                              update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                            <p:commandButton title="Edit Product" icon="fa fa-pencil" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Edit Product" icon="fa fa-pencil" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              disabled="#{productTreeViewController.productEditDisabled}" 
                                              actionListener="#{productTreeViewController.editTab_In_newBtab()}"
                                              update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                            <p:commandButton title="Duplicate" icon="fa fa-clone" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Duplicate" icon="fa fa-clone" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              disabled="#{productTreeViewController.productEditDisabled}" 
                                              actionListener="#{productTreeViewController.cloneTab_In_newBtab()}"
                                              update="tabsview" ajax="false" onclick="form.target = '_blank'"/>
-                            <p:commandButton title="Refresh Products" icon="fa fa-refresh" update="prodtable" styleClass="secondary-button rounded-button"
+                            <p:commandButton title="Refresh Products" icon="fa fa-refresh" update="prodtable" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2"
                                              actionListener="#{productTreeViewController.refreshProductList()}"/>
                         </f:facet>
                     </p:toolbar>
