--- a/src/main/resources/META-INF/resources/busdoc/editbusdoc.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/editbusdoc.xhtml
@@ -20,12 +20,21 @@
         </li>-->
         <li>
             <p:commandButton title="Save" update=":mainform, :growl"
-                             icon="fa fa-save" styleClass="rounded-button"
+                             icon="fa fa-save" styleClass="#{systemDefaultsController.toolbarButtonStyle}"
                              actionListener="#{busDocController.save()}"/>
         </li>
+
         <li>
             <p:commandButton title="Print" icon="fa fa-print" 
-                             styleClass="rounded-button"/>
+                             styleClass="#{systemDefaultsController.toolbarButtonStyle}"/>
+        </li>
+
+        <li>
+            <p:commandButton title="Add From Document" icon="fas fa-file-import" 
+                             styleClass="#{systemDefaultsController.toolbarButtonStyle}"
+                             onclick="PF('docslideout').toggle();"
+                             actionListener="#{busDocController.refreshConvertFromDocumentList()}"
+                             update=":busexeform"/>
         </li>
     </ui:define>
 
@@ -40,8 +49,10 @@
                             <p:inputText id="dno" value="#{busDocController.selected.docno}" placeholder="Document No" disabled="true"/>
 
                             <p:outputLabel value="Date:" for="ddate"/>
-                            <p:datePicker id="ddate" placeholder="Doc Date" value="#{busDocController.selected.createdon}" showIcon="true"
-                                          monthNavigator="true" pattern="dd/MM/yyyy"/>
+                            <p:calendar id="ddate" value="#{busDocController.selected.docdate}" showButtonPanel="true" readonlyInput="true"
+                                        showOn="button" navigator="true" required="true" requiredMessage="Please select Date" pattern="dd/MM/yyyy">
+                                <p:ajax event="dateSelect" listener="#{busDocController.docdateChange}"/>
+                            </p:calendar>
 
                             <p:outputLabel value="Company:" for="partner"/>
                             <p:selectOneMenu id="contactperson" value="#{busDocController.selected.businesspartner}" converter="#{entityConverter}" 
@@ -118,7 +129,7 @@
                         <h5>Products</h5>
                         <p:commandButton id="deleteButton" icon="fa fa-trash"
                                          update=":growl,transtable" disabled="#{empty busDocController.selectedTransaction}" 
-                                         title="Delete selected Transaction" styleClass="secondary-button rounded-button" 
+                                         title="Delete selected Transaction" styleClass="#{systemDefaultsController.systemButtonStyle}" 
                                          actionListener="#{busDocController.deleteTransactions()}">
                             <p:confirm header="Confirmation" message="Sure you want to delete?" icon="fa fa-alert"/>
                         </p:commandButton>
@@ -134,9 +145,10 @@
                                  styleClass="products-table ui-datatable-sm"
                                  style="font-size: small">
 
-                        <p:ajax event="rowSelect"   update=":mainform:deleteButton, :historyform"/>
+                        <p:ajax event="rowSelect" listener="#{busDocController.refreshHistoryPanel()}" 
+                                update=":mainform:deleteButton, :historyform, :historyform"/>
                         <p:ajax event="rowUnselect" update=":mainform:deleteButton" />
-                        <p:ajax event="cellEdit" update=":mainform:totalpanel" />
+                        <p:ajax event="cellEdit" update=":mainform:totalpanel" listener="#{busDocController.selected.refreshTotal()}"/>
 
                         <p:column headerText="TransId" style="width: 50px">
                             <h:outputText value="#{pt.prodtransid}"/>
@@ -188,13 +200,13 @@
                             </f:facet>
                             <p:cellEditor>
                                 <f:facet name="output">
-                                    <h:outputText value="#{pt.lineunitprice}" style="float: right;">
+                                    <h:outputText value="#{pt.linefcunitprice}" style="float: right;">
                                         <f:convertNumber pattern="#,##0.000" />
                                     </h:outputText>
                                 </f:facet>
                                 <f:facet name="input">
-                                    <p:inputText id="price" value="#{pt.lineunitprice}" 
-                                                 style="text-align:right; border-left: 5px solid goldenrod; width: 100%;" label="Quantity">
+                                    <p:inputText id="price" value="#{pt.linefcunitprice}" 
+                                                 style="text-align:right; border-left: 5px solid goldenrod; width: 100%;" label="UnitPrice">
                                         <f:convertNumber pattern="#,##0.000" />
                                         <p:ajax update="total, vamount, namount" />
                                     </p:inputText>
@@ -220,7 +232,7 @@
                                     <p:selectOneMenu id="vattype" style="width:100%" value="#{pt.vatcategoryid}" converter="#{entityConverter}" 
                                                      var="t" effect="fade">
                                         <f:selectItems value="#{busDocController.vatCatogories}" var="item" itemLabel="#{item.categoryname}" itemValue="#{item}"/>                                        <p:ajax update="total, vamount, namount" />
-                                        <p:ajax listener="#{pt.refreshTotals()}" update="total, vamount, namount" />
+                                        <p:ajax listener="#{busDocController.refreshTotal(pt)}" update="total, vamount, namount" />
                                         <p:column>
                                             <f:facet name="header">
                                                 <h:outputText value="Name"/>
@@ -291,23 +303,90 @@
 
     <ui:define name="history">
         <h:form id="historyform">
-            <div class="p-grid">
-                <div class="p-col-12 p-md-12">
-                    <p:panelGrid columns="2" columnClasses="ui-grid-col-4,ui-grid-col-8" layout="grid" style="height: 100px" >
-                        <p:outputLabel value="Dodument No:" for="dno" />
-                        <p:inputText id="dno" value="#{busDocController.selected.docno}" disabled="true"/>
+            <div class="p-col-12 p-md-12">
+                <p:panel>
+                    <p:dataTable id="saleslist"
+                                 value="#{busDocController.salesProductTransactions}"
+                                 sortBy="#{trans.reference}" 
+                                 expandableRowGroups="true"
+                                 style="width: 100%"
+                                 var="trans"
+                                 styleClass="products-table ui-datatable-striped ui-datatable-sm noHeader"
+                                 emptyMessage="No Sales History found">
+                        <p:headerRow>
+                            <p:column colspan="2">
+                                <h:outputText value="#{trans.reference}" />
+                            </p:column>
+                        </p:headerRow>
+                        <p:column style="width: 70%" headerText="Type">
+                            <h:outputText id="scol1" value="#{trans.busdoc.docno}" style="font-size: 12px;" styleClass="p-col-12 p-md-12"/>
+                            <p:tooltip id="toolTipGrow1" for="scol1" value="#{systemDefaultsController.formatDate(trans.transdate)}" showEffect="clip" position="top"/> 
+                        </p:column>
 
-                        <p:outputLabel value="Date:" for="ddate" />
-                        <p:datePicker id="ddate" placeholder="Doc Date" value="#{busDocController.selected.createdon}" showButtonBar="true"/>
-                    </p:panelGrid>
-                </div>
-            </div>       
+                        <p:column style="width: 30%; text-align: right" headerText="Value">
+                            <h:outputText id="scol2" value="#{trans.fcunitprice}" style="font-size: 12px;" styleClass="p-col-12 p-md-12"/>
+                            <p:tooltip id="toolTipGrow2" for="scol2" value="#{trans.busdoc.businesspartner.companyname}" showEffect="clip" position="left"/> 
+                        </p:column>
+                    </p:dataTable>
+                </p:panel>
+                <br/>
+                <p:panel>
+                    <p:dataTable id="purchaselist"
+                                 value="#{busDocController.purchaseProductTransactions}"
+                                 sortBy="#{trans.reference}" 
+                                 expandableRowGroups="true"
+                                 var="trans"
+                                 styleClass="products-table ui-datatable-striped ui-datatable-sm noHeader"
+                                 emptyMessage="No Purchase History found">
+                        <p:headerRow>
+                            <p:column colspan="2">
+                                <h:outputText value="#{trans.reference}" />
+                            </p:column>
+                        </p:headerRow>
+                        <p:column style="width: 70%" headerText="Type">
+                            <h:outputText id="pcol1" value="#{trans.busdoc.docno}" style="font-size: 12px" styleClass="p-col-12 p-md-12"/>
+                            <p:tooltip id="toolTipGrow1" for="pcol1" value="#{systemDefaultsController.formatDate(trans.transdate)}" showEffect="clip" position="top"/> 
+                        </p:column>
+
+                        <p:column style="width: 30%; text-align: right" headerText="Value">
+                            <h:outputText id="pcol2" value="#{trans.fcunitprice}" style="font-size: 12px" styleClass="p-col-12 p-md-12"/>
+                            <p:tooltip id="toolTipGrow2" for="pcol2" value="#{trans.busdoc.businesspartner.companyname}" showEffect="clip" position="left"/> 
+                        </p:column>
+                    </p:dataTable>
+                </p:panel>
+                <br/>
+                <p:panel>
+                    <p:dataTable id="stocklist"
+                                 value="#{busDocController.stockBalances}"
+                                 sortBy="#{trans.reference}" 
+                                 expandableRowGroups="true"
+                                 var="trans"
+                                 styleClass="products-table ui-datatable-striped ui-datatable-sm noHeader"
+                                 emptyMessage="No Stock Balances found">
+                        <p:headerRow>
+                            <p:column colspan="2">
+                                <h:outputText value="#{trans.reference}" />
+                            </p:column>
+                        </p:headerRow>
+                        <p:column style="width: 70%" headerText="Type">
+                            <h:outputText id="pcol1" value="#{trans.branch.abbreviation}" style="font-size: 12px" styleClass="p-col-12 p-md-12"/>
+                            <p:tooltip id="toolTipGrow1" for="pcol1" value="#{systemDefaultsController.formatDate(trans.transdate)}" showEffect="clip" position="top"/> 
+                        </p:column>
+
+                        <p:column style="width: 30%; text-align: right" headerText="Value">
+                            <h:outputText id="pcol2" value="#{trans.balance}" style="font-size: 12px" styleClass="p-col-12 p-md-12"/>
+                            <p:tooltip id="toolTipGrow2" for="pcol2" value="#{trans.branch.company.companyname}" showEffect="clip" position="left"/> 
+                        </p:column>
+                    </p:dataTable>
+                </p:panel>
+            </div>
         </h:form>
+        <ui:include src="/fromdocument.xhtml"/>
     </ui:define>
 
     <ui:define name="productsearch">
         <h:form id="psform">
-            <pe:slideout id="slideoutContact" title="Products" icon="fa fa-search" location="top" widgetVar="slideout" 
+            <pe:slideout id="slideoutProduct" title="Products" icon="fa fa-search" location="top" widgetVar="slideout" 
                          handleStyleClass="product-handle" panelStyleClass="product-panel" offset="230px" bounceTimes="5"
                          bounceDistance="100px" rendered="#{!busDocController.productTabDisabled}" handleOffsetReverse="false" >
                 <p:panel>
@@ -319,31 +398,41 @@
                     </p:panelGrid>
                     <p:panel styleClass="slide-product-panel">
                         <p:dataTable id="prodtable" var="prod"
-                                     value="#{busDocController.productSearchController.productList}" widgetVar="ptable"
-                                     selection="#{busDocController.productSearchController.selectedProducts}"
+                                     value="#{busDocController.productSearchController.productStocks}" widgetVar="ptable"
+                                     selection="#{busDocController.productSearchController.selectedProductStock}"
                                      rowKey="#{prod.productid}"
-                                     emptyMessage="No Products found">
+                                     emptyMessage="No Products found"
+                                     styleClass="products-table ui-datatable-striped ui-datatable-sm"
+                                     style="font-size: small">
                             <p:column selectionMode="multiple" style="width: 16px; text-align: center"/>
-                            <p:column headerText="Stock#" sortBy="#{prod.productid}">
+                            <p:column headerText="Stock#" sortBy="#{prod.productid}" filterMatchMode="contains"
+                                      style="width: 70px">
                                 <h:outputText value="#{prod.productid}" />
                             </p:column>
 
-                            <p:column headerText="Product" sortBy="#{prod.productname}"
-                                      style="width: 40%">
-                                <h:outputText value="#{prod.productname}" />
+                            <p:column headerText="Product" sortBy="#{prod.product.productname}" filterBy="#{prod.product.productname}" filterMatchMode="contains"
+                                      style="width: 250px">
+                                <h:outputText value="#{prod.product.productname}" />
                             </p:column>
 
-                            <p:column headerText="Unit" sortBy="#{prod.unit.unitsym}">
-                                <h:outputText value="#{prod.unit.unitsym}" />
+                            <p:column headerText="Unit" sortBy="#{prod.product.unit.unitsym}" filterBy="#{prod.product.unit.unitsym}" filterMatchMode="contains" style="width: 70px">
+                                <h:outputText value="#{prod.product.unit.unitsym}" />
                             </p:column>
 
-                            <p:column headerText="SupCode" sortBy="#{prod.supplierscode}">
-                                <h:outputText value="#{prod.supplierscode}" />
+                            <p:column headerText="SupCode" sortBy="#{prod.product.supplierscode}" filterBy="#{prod.product.supplierscode}" filterMatchMode="contains">
+                                <h:outputText value="#{prod.product.supplierscode}" />
                             </p:column>
 
-                            <p:column headerText="Brand" sortBy="#{prod.brand.brandname}">
-                                <h:outputText value="#{prod.brand.brandname}" />
+                            <p:column headerText="Brand" sortBy="#{prod.product.brand.brandname}" filterBy="#{prod.product.brand.brandname}" filterMatchMode="contains">
+                                <h:outputText value="#{prod.product.brand.brandname}" />
                             </p:column>
+
+                            <p:columns value="#{busDocController.productSearchController.branchList}" var="branch" 
+                                       headerText="#{branch}" style="text-align: right">
+                                <h:outputText value="#{prod.findStock(branch)}">
+                                    <f:convertNumber pattern="#{systemConfig.decimalFormatString}" />
+                                </h:outputText>
+                            </p:columns> 
                         </p:dataTable>
                     </p:panel>
                 </p:panel>
