--- a/src/main/resources/META-INF/resources/demo/button.xhtml
+++ b/src/main/resources/META-INF/resources/demo/button.xhtml
@@ -20,10 +20,36 @@
                     </div>
 
                     <div class="card">
-                        <h5>Icons</h5>
-                        <p:commandButton type="button" icon="pi pi-star" styleClass="p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Bookmark" icon="pi pi-bookmark" styleClass="p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Bookmark" icon="pi pi-bookmark" iconPos="right" />
+                        <h5>Severities</h5>
+                        <p:commandButton type="button" value="Primary" styleClass="p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Secondary" styleClass="secondary-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Success" styleClass="success-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Warning" styleClass="warning-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Info" styleClass="info-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Help" styleClass="help-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Danger" styleClass="danger-button p-mr-2 p-mb-2" />
+                    </div>
+
+                    <div class="card">
+                        <h5>Text</h5>
+                        <p:commandButton type="button" value="Primary" styleClass="text-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Secondary" styleClass="secondary-button text-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Success" styleClass="success-button text-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Warning" styleClass="warning-button text-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Info" styleClass="info-button text-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Help" styleClass="help-button text-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Danger" styleClass="danger-button text-button  p-mr-2 p-mb-2" />
+                    </div>
+
+                    <div class="card">
+                        <h5>Outlined</h5>
+                        <p:commandButton type="button" value="Primary" styleClass="outlined-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Secondary" styleClass="secondary-button outlined-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Success" styleClass="success-button outlined-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Warning" styleClass="warning-button outlined-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Info" styleClass="info-button outlined-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Help" styleClass="help-button outlined-button  p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Danger" styleClass="danger-button outlined-button  p-mr-2 p-mb-2" />
                     </div>
 
                     <div class="card">
@@ -72,14 +98,10 @@
 
                 <div class="p-col-12 p-md-6">
                     <div class="card">
-                        <h5>Severities</h5>
-                        <p:commandButton type="button" value="Primary" styleClass="p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Secondary" styleClass="secondary-button p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Success" styleClass="success-button p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Warning" styleClass="warning-button p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Info" styleClass="info-button p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Help" styleClass="help-button p-mr-2 p-mb-2" />
-                        <p:commandButton type="button" value="Danger" styleClass="danger-button p-mr-2 p-mb-2" />
+                        <h5>Icons</h5>
+                        <p:commandButton type="button" icon="pi pi-star" styleClass="p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Bookmark" icon="pi pi-bookmark" styleClass="p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" value="Bookmark" icon="pi pi-bookmark" iconPos="right" />
                     </div>
 
                     <div class="card">
@@ -113,6 +135,28 @@
                         <p:commandButton type="button" icon="pi pi-search" styleClass="info-button rounded-button p-mr-2 p-mb-2"/>    
                         <p:commandButton type="button" icon="pi pi-heart" styleClass="help-button rounded-button p-mr-2 p-mb-2"/>                            
                         <p:commandButton type="button" icon="pi pi-sign-out" styleClass="danger-button rounded-button p-mr-2 p-mb-2"/>
+                    </div>
+
+                    <div class="card">
+                        <h5>Rounded Text</h5>
+                        <p:commandButton type="button" icon="pi pi-star" styleClass="rounded-button text-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" icon="pi pi-bookmark" styleClass="secondary-button text-button rounded-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" icon="pi pi-check" styleClass="success-button text-button rounded-button p-mr-2 p-mb-2"/>
+                        <p:commandButton type="button" icon="pi pi-user" styleClass="warning-button rtext-button rounded-button p-mr-2 p-mb-2"/>
+                        <p:commandButton type="button" icon="pi pi-search" styleClass="info-button text-button rounded-button p-mr-2 p-mb-2"/>    
+                        <p:commandButton type="button" icon="pi pi-heart" styleClass="help-button text-button rounded-button p-mr-2 p-mb-2"/>                            
+                        <p:commandButton type="button" icon="pi pi-sign-out" styleClass="danger-button text-button rounded-button p-mr-2 p-mb-2"/>
+                    </div>
+
+                    <div class="card">
+                        <h5>Rounded Outlined</h5>
+                        <p:commandButton type="button" icon="pi pi-star" styleClass="rounded-button outlined-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" icon="pi pi-bookmark" styleClass="secondary-button outlined-button rounded-button p-mr-2 p-mb-2" />
+                        <p:commandButton type="button" icon="pi pi-check" styleClass="success-button outlined-button rounded-button p-mr-2 p-mb-2"/>
+                        <p:commandButton type="button" icon="pi pi-user" styleClass="warning-button outlined-button rounded-button p-mr-2 p-mb-2"/>
+                        <p:commandButton type="button" icon="pi pi-search" styleClass="info-button outlined-button rounded-button p-mr-2 p-mb-2"/>    
+                        <p:commandButton type="button" icon="pi pi-heart" styleClass="help-button outlined-button rounded-button p-mr-2 p-mb-2"/>                            
+                        <p:commandButton type="button" icon="pi pi-sign-out" styleClass="danger-button outlined-button rounded-button p-mr-2 p-mb-2"/>
                     </div>
                 </div>
             </div>
