--- a/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/template_busdoc.xhtml
@@ -103,16 +103,30 @@
             /* Custom styles for the SlideOut */
             .product-panel {
             border-color: green;
-            border-width: 5px;
+            border-width: 1px;
             position: fixed;
             z-index: 100 !important;
             display: inline;
             }
             .product-handle {
-            padding: 4px;
+            padding: 1px;
             font-size: 14px;
             color: white !important;
             background-color: green;
+            }
+
+            .fromdoc-panel {
+            border-color: blue;
+            border-width: 1px;
+            position: fixed;
+            z-index: 100 !important;
+            display: inline;
+            }
+            .fromdoc-handle {
+            padding: 1px;
+            font-size: 14px;
+            color: white !important;
+            background-color: blue;
             }
 
             .slide-product-panel{
